<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical"
    android:paddingLeft="12dp"
    android:paddingRight="12dp">

    <LinearLayout
        android:id="@+id/ll_theme_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_item_selector_filter"
        android:orientation="horizontal"
        android:paddingBottom="12dp"
        android:paddingTop="12dp">

        <TextView
            android:id="@+id/tv_theme_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/theme_mode"
            android:textColor="@color/text_content_color"
            android:textSize="14sp" />

        <com.ldfs.theme.widget.SwitchView
            android:id="@+id/sv_theme_mode"
            android:layout_width="48dp"
            android:layout_height="28dp"
            auto:sv_checkColor="@color/switch_green"
            auto:sv_strokeColor="@color/line"
            auto:sv_unCheckColor="@color/line" />

    </LinearLayout>

    <com.ldfs.theme.widget.FrameView
        android:id="@+id/fv_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        auto:fv_emptyInfo="@string/empty_info">

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/container_info"
            android:textColor="@color/text_content_color"
            android:textSize="14sp" />
    </com.ldfs.theme.widget.FrameView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Button
            android:id="@+id/btn_load"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/white_item_selector_filter"
            android:text="@string/load"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_empty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/white_item_selector_filter"
            android:text="@string/empty_info"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/white_item_selector_filter"
            android:text="@string/error_info"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>