<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    android:layout_width="@+id/fl_frame_layout">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/progress_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:minHeight="200dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/load_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/loading"
            android:textColor="@color/text_content_color"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/empty_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:drawablePadding="5dip"
        android:drawableTop="@drawable/no_data_filter"
        android:gravity="center"
        android:minHeight="200dp"
        android:text="@string/no_item"
        android:textColor="@color/second_font_color"
        android:textSize="15sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/error_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:drawableTop="@drawable/no_data_filter"
        android:gravity="center"
        android:minHeight="200dp"
        android:text="@string/no_network"
        android:textColor="@color/text_content_color"
        android:textSize="15sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/repeat_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:minHeight="200dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_repeat_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/details_wifi_icon_filter" />

        <TextView
            android:id="@+id/tv_repeat_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dip"
            android:layout_marginTop="25dip"
            android:text="@string/network_load_error"
            android:textColor="@color/second_font_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_try"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/load_repeat_try_selector"
            android:paddingBottom="5dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:paddingTop="5dip"
            android:text="@string/refresh_try"
            android:textColor="@color/second_font_color"
            android:textSize="14sp" />
    </LinearLayout>

</merge>
