<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_theme_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_selector_filter"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <TextView
            android:id="@+id/tv_theme_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/theme_mode"
            android:textColor="@color/text_content_color" />

        <com.ldfs.theme.widget.SwitchView
            android:id="@+id/sv_theme_mode"
            android:layout_width="48dp"
            android:layout_height="28dp"
            auto:sv_checkColor="@color/switch_green"
            auto:sv_strokeColor="@color/line"
            auto:sv_unCheckColor="@color/line" />

    </LinearLayout>

    <com.ldfs.theme.widget.DivideTextView
        android:id="@+id/tv_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_selector_filter"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:text="@string/list"
        android:textColor="@color/text_content_color"
        auto:dl_divideColor="@color/line"
        auto:dl_divideGravity="bottom" />

    <com.ldfs.theme.widget.DivideTextView
        android:id="@+id/tv_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_selector_filter"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:text="@string/custom_layout"
        android:textColor="@color/text_content_color"
        auto:dl_divideColor="@color/line"
        auto:dl_divideGravity="bottom" />


</LinearLayout>
